--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "fuse.js": "^3.4.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-draggable": "^4.3.1",
     "react-new-window": "^0.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "uuid": "^7.0.3"
   },
@@ -47,6 +47,10 @@
     "yargs-parser": ">=18.1.2",
     "serialize-javascript": ">=3.1.0",
     "object-path": ">=0.11.5",
-    "ini": ">1.3.6"
+    "ini": ">1.3.6",
+    "immer": ">=8.0.1",
+    "elliptic": ">=6.5.4",
+    "ssri": "^8.0.1",
+    "is-svg": "^4.2.2"
   }
 }
